Features: blog added, pages added, dynamic tags

--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.24.54",
+    "@contentful/rich-text-react-renderer": "^14.1.1",
+    "gatsby": "^2.24.85",
+    "gatsby-plugin-react-helmet": "^3.3.14",
     "gatsby-plugin-sass": "^2.3.13",
+    "gatsby-plugin-sharp": "^2.6.43",
+    "gatsby-remark-images": "^3.3.39",
+    "gatsby-remark-relative-images": "^2.0.2",
+    "gatsby-source-contentful": "^3.0.3",
     "gatsby-source-filesystem": "^2.3.32",
     "gatsby-transformer-remark": "^2.8.37",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "env-cmd": "^10.1.0",
